# gdy_pl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TRAINING_GUIDE.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  trainer.py
.claude/: settings.local.json
config/: __init__.py  registry.py
configs/: gdynet_ferro.yaml  gdynet_vanilla.yaml
data/: __init__.py  gdynet_dataloader.py
docs/: index.md  training-guide.md
frontier/: example_submit.sbatch
loss/: __init__.py  vamploss.py
models/: __init__.py  gdynet_ferro.py  gdynet_vanilla.py
notebooks/: README.md  analysis_example.ipynb
notebooks/tensorflow/: 1pOv_bto_TF.ipynb  pristine_bto_TF.ipynb
notebooks/torch/: bto_pristine.ipynb  lis_visualization.ipynb
postprocess/: __init__.py  koopman_postprocess.py  postprocess.py
utils/: __init__.py  sampler.py
